core: dashbord
